@@ -599,6 +599,18 @@ Keys:
 
   .. versionadded:: 0.3.9
 
+* congestion_control
+
+  **optional**, **type**: str
+
+  Set a custom TCP congestion control algorithm to use.
+
+  It is recommended to load the corresponding kernel module before you use it.
+
+  **default**: not set
+
+  .. versionadded:: 0.3.9
+
 * netfilter_mark
 
   **optional**, **type**: u32, **alias**: mark
